# keycloak-extend

./: .gitignore  README.md  pyproject.toml  requirements.txt  run_tests.sh  setup.py  test_init.sh
.github/workflows/: run_tests.yml
src/keycloak_extend/: __init__.py  keycloak_admin.py  keycloak_openid.py  url_patterns.py
tests/: conftest.py  docker-compose.yaml  integration.py  test_keycloak_admin.py  test_keycloak_openid.py  test_units.py
