[tool.black]
line-length = 120

packages = [
    { include = "keycloak_extend", from = "src/" },
    { include = "keycloak_extend/**/*.py", from = "src/" },
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.20.0"
python-jose = "^3.3.0"
urllib3 = "^1.26.0"
mock = {version = "^4.0.3", optional = true}
alabaster = {version = "^0.7.12", optional = true}
commonmark = {version = "^0.9.1", optional = true}
recommonmark = {version = "^0.7.1", optional = true}
Sphinx = {version = "^5.0.2", optional = true}
sphinx-rtd-theme = {version = "^1.0.0", optional = true}
readthedocs-sphinx-ext = {version = "^2.1.8", optional = true}
m2r2 = {version = "^0.3.2", optional = true}
sphinx-autoapi = {version = "^1.8.4", optional = true}
requests-toolbelt = "^0.9.1"
python-keycloak = "^2.6.0"


[tool.poetry.dev-dependencies]
tox = "^3.25.0"
pytest = "^7.1.2"
pytest-cov = "^3.0.0"
wheel = "^0.37.1"
pre-commit = "^2.19.0"
isort = "^5.10.1"
black = "^22.3.0"
flake8 = "^3.5.0"
flake8-docstrings = "^1.6.0"
commitizen = "^2.28.0"
cryptography = "^37.0.4"
codespell = "^2.1.0"
darglint = "^1.8.1"

[tool.poetry.extras]
docs = [
    "mock",
    "alabaster",
    "commonmark",
    "recommonmark",
    "sphinx",
    "sphinx-rtd-theme",
    "readthedocs-sphinx-ext",
    "m2r2",
    "sphinx-autoapi",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
